@@ -1,5 +1,6 @@
 Revision history for DBIx-Class-InflateColumn-Boolean
 0.003000  2016-02-02
+	* Switch to ExtUtils::MakeMaker.
 	* Replace Contextual::Return with a light-weight
 	  DBIx::Class::InflateColumn::Boolean::Value object
 	  (RT#100827, haarg, abraxxa)
